--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
     "react-validation": "^3.0.7",
+    "socket.io": "^4.6.2",
     "socket.io-client": "^4.6.2",
     "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
