--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "backend for our MessagingApp",
   "main": "server.js",
   "scripts": {
-    "Start": "node server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,5 +16,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
     "socket.io": "^4.6.2"
+  },
+  "devDependencies": {
+    "concurrently": "^8.1.0"
   }
 }
