--- a/server/package.json
+++ b/server/package.json
@@ -5,19 +5,29 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
+    "twoFA": "npx ts-node-dev --respawn --transpile-only --exit-child ./twoFA/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "hi-base32": "^0.5.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
+    "otpauth": "^9.1.2",
     "socket.io": "^4.6.2"
   },
   "devDependencies": {
-    "concurrently": "^8.1.0"
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "concurrently": "^8.1.0",
+    "morgan": "^1.10.0",
+    "prisma": "^4.15.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
